Modern Pie project page edits

--- a/_projects/modernpie.html
+++ b/_projects/modernpie.html
@@ -2,7 +2,7 @@
 layout: post
 title:  "Modern Pie Company"
 subtitle: ", university HCi project"
-date: 29/04/2017
+date: 20/05/2017
 color1: "#34D4C1"
 color2: "#28FABE"
 role:
@@ -22,14 +22,15 @@ category: "case study"
 canonical: "Case Study"
 ---
 
-<p>The <a class="{{site.link_classes}}" href="https://github.com/webSmart001/MPC">Modern Pie company</a> was a side project born from the frustrations of trying to find a space to work in Belfast City Centre with fast and stable wifi. Often, I’d grab a tea and sit down in a coffee shop to do some work .</p>
+<p>The <a class="{{site.link_classes}}" href="https://github.com/webSmart001/MPC">Modern Pie company</a>was created for a university human computer interaction course. I worked with 
+and led a team of 4 other team members. Team members were all assigned roles based on their skills, due to this I lead as project manager and as the lead developer.</p>
 
-<p>The web app was designed and built over an Easter weekend (fuelled by chocolate, of course).</p>
+<br>
 
 <h2 class="{{site.post_heading_classes}}">Design</h2>
 
 <p>The design was kept simple. The focus had to be on the spaces themselves, with little distraction.</p>
-
+<!--
 <div class="cf ph3-l center">
   <figure class="tc db mv2 fl w-100 w-50-m w-25-l ma0 ph2-m ph3-l">
     {% include image.html url="theblackbox" type="png" alt="The Black Box" %}
@@ -43,16 +44,18 @@ canonical: "Case Study"
   <figure class="tc db mv2 fl w-100 w-50-m w-25-l ma0 ph2-m ph3-l">
     {% include image.html url="themac" type="png" alt="The Mac" %}
   </figure>
-</div>
+</div>-->
 
-<p>A space consists of several key attributes:</p>
+<br>
+
+<p>The website needed to follow a few basic requirements:</p>
 
 <ol>
-  <li>The title</li>
-  <li>Space type and location</li>
-  <li>Wifi speed (in Mbps) </li>
-  <li>Wifi password (if protected)</li>
-  <li>Opening hours</li>
+  <li>A reservation page</li>
+  <li>Daily specials menu</li>
+  <li>Quick loading</li>
+  <li>Accesibilty options for people of varying ability</li>
+  <li>Staff page - showing active staff and their department</li>
 </ol>
 
 <p>And that is all there is to it. I thought it was important to focus only on the key aspects of a working space; the wifi speed, opening hours and password (so you’re not looking around wondering who to ask) - no images (for performance reasons), and no reviews. Foursquare and tripAdvisor do reviews brilliantly, it was important to focus on only one metric - the wifi speed.</p>
@@ -61,15 +64,15 @@ canonical: "Case Study"
   <div class="flex flex-wrap justify-around">
     <div class="br-100 w4 h4 ma2 ma3-ns" style="background-color: #1C1E2E;">
     </div>
-    <div class="br-100 w4 h4 ma2 ma3-ns" style="background-color: #87F7DD">
+    <div class="br-100 w4 h4 ma2 ma3-ns" style="background-color: #eae3ea">
     </div>
-    <div class="br-100 w4 h4 ma2 ma3-ns" style="background-color: #44FEA5">
+    <div class="br-100 w4 h4 ma2 ma3-ns" style="background-color: #b4dbc0">
     </div>
-    <div class="br-100 w4 h4 ma2 ma3-ns" style="background-color: #F26532">
+    <div class="br-100 w4 h4 ma2 ma3-ns" style="background-color: #a7b3a5">
     </div>
-    <div class="br-100 w4 h4 ma2 ma3-ns" style="background-color: #F8395E">
+    <div class="br-100 w4 h4 ma2 ma3-ns" style="background-color: #b56357">
     </div>
-    <div class="br-100 w4 h4 ma2 ma3-ns" style="background-color: #0083FF">
+    <div class="br-100 w4 h4 ma2 ma3-ns" style="background-color: #dc635a">
     </div>
   </div>
 </div>
