--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ id: "index"
     </div>
     <div class="w-100 w-70-ns relative {{site.paragraph_classes}}">
       <span class="status dib bg-red mr1 v-mid br-100 absolute"></span>
-      <p class="ma0 dib">I'm not available for work. <a class="{{site.link_classes}}" href="{{site.baseurl}}/hire-me">Hire me</a></p>
+      <p class="ma0 dib">I'm not available for work. <a class="{{site.link_classes}}"</a></p>
     </div>
   </section>
 
