--- a/hire-me.html
+++ b/hire-me.html
@@ -50,7 +50,7 @@ card_image: false
       <h3 class="lh-copy-xl-ns mb3 mb0-ns f8 gray ttu tracked ma0">Contact</h3>
     </div>
     <div class="fl w-100 w-70-ns">
-      <p class="mt0 lh-copy-lg">If you would like to work with me you can get in touch by <a class="{{site.link_classes}}" href="mailto:{{site.social.email}}">emailing me</a> or shooting me a DM on <a class="{{site.link_classes}}" href="{{site.social.twitter.url}}{{site.social.twitter.username}}">Twitter</a>.</p>
+      <p class="mt0 lh-copy-lg">If you would like to work with me you can get in touch by <a class="{{site.link_classes}}" href="mailto:{{site.social.email}}">emailing me</a>.</p>
 
     </div>
   </section>
